--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -23,14 +23,14 @@
   <properties>
     <revision>9.2.0</revision>
     <changelist>-SNAPSHOT</changelist>
-    <jenkins.version>${jenkins.baseline}.2</jenkins.version>
+    <jenkins.baseline>2.263</jenkins.baseline>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
     <analysis-model-api.version>10.2.5</analysis-model-api.version>
     <analysis-model-tests.version>10.2.5</analysis-model-tests.version>
 
-    <forensics-api-plugin.version>1.0.0</forensics-api-plugin.version>
-    <plugin-util-api.version>2.2.0</plugin-util-api.version>
+    <forensics-api-plugin.version>1.1.0</forensics-api-plugin.version>
+    <plugin-util-api.version>2.3.0</plugin-util-api.version>
 
     <data-tables-api.version>1.10.25-1</data-tables-api.version>
     <font-awesome-api.version>5.15.3-3</font-awesome-api.version>
