make no-issues-portlet more expressive

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/PullRequestMonitoringPortlet/monitor.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/PullRequestMonitoringPortlet/monitor.properties
@@ -1,3 +1,3 @@
 zeroIssues.title=Congratulations
-zeroIssues.description=There are no issues for the current build!
+zeroIssues.description=No new issues have been reported!
 qualityGate.Name=Quality gate:
