--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/PullRequestMonitoringPortlet/monitor.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/PullRequestMonitoringPortlet/monitor.properties
@@ -1,3 +1,5 @@
 zeroIssues.title=Congratulations
-zeroIssues.description=No new issues have been reported!
+zeroNewIssues.title=Good Job
+zeroIssues.description=No issues have been reported!
+zeroNewIssues.description=No new issues have been reported, but there are still some outstanding ones!
 qualityGate.Name=Quality gate:
