Add new configuration field "canScanConsoleLog" to groovy parsers
* Existing code has hard-coded behaviour to prevent this due to security
concerns.
* Some Jenkins admins may take the view that as they're providing the
code themselves, they're ok with running it on the master node and hence
may want to allow it.
* Associated help text explains the pros/cons of the decision.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/ParserConfiguration/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/ParserConfiguration/config.properties
@@ -1,1 +1,2 @@
 title.description=Create new parsers for the warnings plug-in based on a regular expression and a Groovy script.
+canScanConsoleLog.description=Allow these parsers to act upon the build console.
