Make groovy parsers use new "canScanConsoleLog" config field
* Added maintenance comment in case we can improve things in future.
* Web-form changes depending on canScanConsoleLog setting.
* Previous enhancements to parent class's pattern field handling now
handles both options so no local help variant is needed.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/GroovyScript/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/GroovyScript/config.properties
@@ -5,3 +5,6 @@ description.reportEncoding=Encoding of your report files.
 title.pattern=Report File Pattern
 description.pattern=<a href="{0}">Fileset ''includes''</a> setting that specifies the report files to scan for \
   issues, such as ''**/report.log''.
+description.consoleOrPattern=<a href="{0}">Fileset ''includes''</a> setting that specifies the report files to scan for \
+  issues, such as ''**/report.log''. If you leave this field blank, then the console log will be \
+  scanned for issues instead.
