--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/ParserConfiguration/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/ParserConfiguration/config.properties
@@ -1,2 +1,2 @@
 title.description=Create new parsers for the warnings plug-in based on a regular expression and a Groovy script.
-canScanConsoleLog.description=Allow these parsers to act upon the build console.
+consoleLogScanningPermitted.description=Allow these parsers to act upon the build console.
