Address review comments on ParserConfiguration
* Jelly uses config for title too
* Renamed help to match field name so it shows up again
* Now warns the admin that enabling console logging is potentially
unsafe.
* Fixed poor terminology in help text.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/ParserConfiguration/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/ParserConfiguration/config.properties
@@ -1,2 +1,3 @@
 title.description=Create new parsers for the warnings plug-in based on a regular expression and a Groovy script.
-consoleLogScanningPermitted.description=Allow these parsers to act upon the build console.
+consoleLogScanningPermitted.description=Allow these parsers to act upon the build console log.
+consoleLogScanningPermitted.title=Permit Parsing of Console Log?
