--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
@@ -1,12 +1,15 @@
 title.reportEncoding=Report Encoding
 description.reportEncoding=Encoding of your report files.
 title.pattern=Report File Pattern
-description.pattern=Specifies the report files to scan for issues, such as ''**/target/checkstyle-results.xml''.
-description.overridePattern=Specifies the report files to scan for issues, \
-    such as ''**/target/checkstyle-results.xml''. If you leave this field empty, then the default file pattern \
-    ''{0}'' will be used.
-description.consoleOrPattern=Specifies the report files to scan for issues, \
-    such as ''**/target/checkstyle-results.xml''. If you leave this field blank, then the console log will be \
-    scanned for issues.
+description.patternRequired=<a href="{0}">Fileset ''includes''</a> syntax \
+    specifying the files to scan for issues, \
+    such as ''**/target/report.log''.
+description.patternOrDefault=<a href="{0}">Fileset ''includes''</a> syntax \
+    specifying the files to scan for issues. \
+    If you leave this field empty then the default file pattern ''{1}'' will be used.
+description.patternOrConsole=<a href="{0}">Fileset ''includes''</a> syntax \
+    specifying the files to scan for issues, \
+    such as ''**/target/report.log''. \
+    If you leave this field blank then the console log will be scanned for issues.
 title.defaultPattern=Default Pattern
 title.skipSymbolicLinks=Skip symbolic links when searching for files
