--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/GroovyScript/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/GroovyScript/config.properties
@@ -3,8 +3,10 @@ description.tool=Select a Groovy parser (see <a href="{0}/configure">system conf
 title.reportEncoding=Report Encoding
 description.reportEncoding=Encoding of your report files.
 title.pattern=Report File Pattern
-description.pattern=<a href="{0}">Fileset ''includes''</a> setting that specifies the report files to scan for \
-  issues, such as ''**/report.log''.
-description.consoleOrPattern=<a href="{0}">Fileset ''includes''</a> setting that specifies the report files to scan for \
-  issues, such as ''**/report.log''. If you leave this field blank, then the console log will be \
-  scanned for issues instead.
+description.patternRequired=<a href="{0}">Fileset ''includes''</a> syntax \
+    specifying the files to scan for issues, \
+    such as ''**/report.log''.
+description.patternOrConsole=<a href="{0}">Fileset ''includes''</a> syntax \
+    specifying the files to scan for issues, \
+    such as ''**/report.log''. \
+    If you leave this field blank then the console log will be scanned for issues.
