--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>warnings-ng</artifactId>
   <packaging>hpi</packaging>
   <name>Warnings Next Generation Plugin</name>
-  <version>9.3.0</version>
+  <version>${revision}${changelist}</version>
 
   <description>Jenkins Warnings Next Generation plugin collects compiler warnings or issues reported by static
     analysis tools and visualizes the results. It has built-in support for numerous static analysis tools
@@ -21,7 +21,7 @@
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
 
   <properties>
-    <revision>9.3.0</revision>
+    <revision>9.4.0</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.baseline>2.263</jenkins.baseline>
     <module.name>${project.groupId}.warnings.ng</module.name>
@@ -737,7 +737,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v9.3.0</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <repositories>
