--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -116,6 +116,34 @@
       </properties>
     </profile>
     <profile>
+      <id>all-ui-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <reuseForks>false</reuseForks>
+              <trimStackTrace>false</trimStackTrace> <!-- SUREFIRE-1798 -->
+              <environmentVariables>
+                <PLUGINS_DIR>../plugin/target/test-classes/test-dependencies</PLUGINS_DIR>
+                <JENKINS_VERSION>${jenkins.version}</JENKINS_VERSION>
+                <BROWSER>firefox-container</BROWSER>
+              </environmentVariables>
+              <rerunFailingTestsCount>1</rerunFailingTestsCount>
+              <includes>
+                <include>**/*Tests.java</include>
+                <include>**/*Test.java</include>
+              </includes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <properties>
+        <maven.test.skip>false</maven.test.skip>
+      </properties>
+    </profile>
+    <profile>
       <id>consume-incrementals</id>
     </profile>
     <profile>
