--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -16,7 +16,7 @@
   <name>UI Tests of Warnings Plugin</name>
 
   <properties>
-    <jenkins.version>2.263.3</jenkins.version>
+    <jenkins.version>2.303.2</jenkins.version>
     <json-smart.version>2.3</json-smart.version>
     <json-unit-assertj.version>2.28.0</json-unit-assertj.version>
   </properties>
@@ -132,8 +132,7 @@
               </environmentVariables>
               <rerunFailingTestsCount>1</rerunFailingTestsCount>
               <includes>
-                <include>**/*Tests.java</include>
-                <include>**/*Test.java</include>
+                <include>**/UiTestSuite.java</include>
               </includes>
             </configuration>
           </plugin>
