--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -135,6 +135,7 @@
           <excludes>
             <exclude>.*Test</exclude>
             <exclude>.*IssuesDetailsTable</exclude>
+            <exclude>.*AbstractIssuesTable</exclude>
           </excludes>
           <entryPointClassPackage>io.jenkins.plugins.analysis.warnings</entryPointClassPackage>
         </configuration>
