--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: 11
       - name: Build warnings plugin and download dependencies
         run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
-      - name: Run UI tests for the detais tabs
+      - name: Run UI tests for the details tabs
         env:
           BROWSER: firefox-container
         run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DetailsTabUiTest -Dgpg.skip
