--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -75,3 +75,88 @@ jobs:
           BROWSER: firefox-container
         run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=SnippetGeneratorUiTest -Dgpg.skip
 
+  global-configuration:
+    runs-on: [ubuntu-latest]
+    name: Global configuration UI tests
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build warnings plugin and download dependencies
+        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+      - name: Run UI tests for Jenkins' global configuration
+        env:
+          BROWSER: firefox-container
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=GlobalConfigurationUiTest -Dgpg.skip
+
+  issues-column:
+    runs-on: [ubuntu-latest]
+    name: Issues column UI tests
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build warnings plugin and download dependencies
+        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+      - name: Run UI tests for the issues column
+        env:
+          BROWSER: firefox-container
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip
+
+  trend-charts:
+    runs-on: [ubuntu-latest]
+    name: Trend charts UI tests
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build warnings plugin and download dependencies
+        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+      - name: Run UI tests for the trend charts
+        env:
+          BROWSER: firefox-container
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip
+
+  miscenaleous:
+    runs-on: [ubuntu-latest]
+    name: Miscelaneous UI tests
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build warnings plugin and download dependencies
+        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+      - name: Run miscelaneous UI tests of the warnings plugin
+        env:
+          BROWSER: firefox-container
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip
+
+  git:
+    runs-on: [ubuntu-latest]
+    name: Git forensics UI tests
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build warnings plugin and download dependencies
+        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+      - name: Run UI tests for the git forensics integration
+        env:
+          BROWSER: firefox-container
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=GitForensicsUiTest -Dgpg.skip
+
