--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -128,7 +128,7 @@ jobs:
 
   miscenaleous:
     runs-on: [ubuntu-latest]
-    name: Miscelaneous UI tests
+    name: Miscellaneous UI tests
 
     steps:
       - uses: actions/checkout@v1
@@ -138,7 +138,7 @@ jobs:
           java-version: 11
       - name: Build warnings plugin and download dependencies
         run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
-      - name: Run miscelaneous UI tests of the warnings plugin
+      - name: Run miscellaneous UI tests of the warnings plugin
         env:
           BROWSER: firefox-container
         run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip
