--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -191,6 +191,11 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>apache-httpcomponents-client-4-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
+    </dependency>
 
     <!-- Optional Jenkins Plug-in Dependencies -->
     <dependency>
