--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run UI tests for the details tabs
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DetailsTabUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DetailsTabUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   dashboard-view:
     runs-on: [ubuntu-latest]
@@ -39,7 +39,7 @@ jobs:
       - name: Run UI tests for the dashboard view
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DashboardViewPortletUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DashboardViewPortletUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   freestyle-configuration:
     runs-on: [ubuntu-latest]
@@ -56,7 +56,7 @@ jobs:
       - name: Run UI tests for the freestyle configuration
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=FreeStyleConfigurationUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=FreeStyleConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   pipeline-snippet-generator:
     runs-on: [ubuntu-latest]
@@ -73,7 +73,7 @@ jobs:
       - name: Run UI tests for the pipeline snippet configurator
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=SnippetGeneratorUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=SnippetGeneratorUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   global-configuration:
     runs-on: [ubuntu-latest]
@@ -90,7 +90,7 @@ jobs:
       - name: Run UI tests for Jenkins' global configuration
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=GlobalConfigurationUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=GlobalConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   issues-column:
     runs-on: [ubuntu-latest]
@@ -107,7 +107,7 @@ jobs:
       - name: Run UI tests for the issues column
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   trend-charts:
     runs-on: [ubuntu-latest]
@@ -124,7 +124,7 @@ jobs:
       - name: Run UI tests for the trend charts
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   miscenaleous:
     runs-on: [ubuntu-latest]
@@ -141,5 +141,5 @@ jobs:
       - name: Run miscellaneous UI tests of the warnings plugin
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip
+        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
