--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -31,7 +31,7 @@
     <forensics-api-plugin.version>1.5.0</forensics-api-plugin.version>
     <plugin-util-api.version>2.5.1</plugin-util-api.version>
 
-    <data-tables-api.version>1.11.3-4-rc567.85074b381d75</data-tables-api.version>
+    <data-tables-api.version>v1.11.3-4</data-tables-api.version>
     <echarts-api.version>5.2.2-1</echarts-api.version>
     <bootstrap5-api.version>5.1.3-1</bootstrap5-api.version>
     <error_prone_annotations.version>2.9.0</error_prone_annotations.version>
