--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -16,10 +16,22 @@
   <name>UI Tests of Warnings Plugin</name>
 
   <properties>
-    <jenkins.version>2.303.2</jenkins.version>
+    <jenkins.version>2.303.3</jenkins.version>
     <json-smart.version>2.3</json-smart.version>
     <json-unit-assertj.version>2.28.0</json-unit-assertj.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jenkins-ci.main</groupId>
+        <artifactId>jenkins-core</artifactId>
+        <version>2.303.3</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+
 
   <dependencies>
     <dependency>
