--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,8 +25,8 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>10.7.0-rc480.b86dcf5f280e</analysis-model-api.version>
-    <analysis-model-tests.version>10.7.0-rc4434.5af5868d8aee</analysis-model-tests.version>
+    <analysis-model-api.version>10.7.0</analysis-model-api.version>
+    <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
 
     <forensics-api-plugin.version>1.6.0</forensics-api-plugin.version>
     <plugin-util-api.version>2.5.1</plugin-util-api.version>
