Add tests for `RegisteredParser`.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -566,9 +566,11 @@
             <package>io.jenkins.plugins.analysis.core.scm</package>
             <package>io.jenkins.plugins.analysis.core.model</package>
             <package>io.jenkins.plugins.analysis.core.util</package>
+            <package>io.jenkins.plugins.analysis.warnings</package>
           </packages>
           <excludes combine.children="append">
             <exclude>.*Thresholds</exclude>
+            <exclude>.*TaskScanner.*</exclude>
           </excludes>
           <entryPointClassPackage>io.jenkins.plugins.analysis.core.assertions</entryPointClassPackage>
         </configuration>
