Define a module name.

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -31,8 +31,6 @@
     </dependencies>
   </dependencyManagement>
 
-
-
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci</groupId>
@@ -213,6 +211,17 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>${artifactId}</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
