--- a/plugin/src/main/resources/issues/publish-parameters.properties
+++ b/plugin/src/main/resources/issues/publish-parameters.properties
@@ -14,8 +14,16 @@ description.status.new=If the number of new issues is greater or equal than one 
   build is considered as unstable or failed, respectively. Values less or equal zero are ignored.
 qualityGates.description=You can define an arbitrary number of quality gates that will be evaluated after a build. \
   If a quality gate is not passed then the build can be set to unstable or failed, respectively.
-title.trendChartType=Trend chart type
+title.trendChartType=Trend Chart Type
 description.trendChartType=Select trend charts and their position.
 
 title.skipPublishingChecks=Skip publishing of checks to SCM provider platforms
 title.publishAllIssues=Publish new and outstanding issues to SCM provider platforms
+
+threshold.100.percent=100%
+threshold.0.percent=0%
+description.health.limit=Configure the thresholds for the build health. If left empty then no health report is created. \
+              If the actual number of warnings is between the provided thresholds then the build health is interpolated.
+description.health.severities=Determines which warning severities should be considered when evaluating the build health.
+description.healthy=Report health as 100% when the number of issues is less than this value.
+description.unhealthy=Report health as 0% when the number of issues is greater than this value.
