--- a/plugin/src/main/resources/issues/scan-parameters.properties
+++ b/plugin/src/main/resources/issues/scan-parameters.properties
@@ -1,10 +1,10 @@
 title.sourceCodeEncoding=Source Code Encoding
 description.sourceCodeEncoding=Encoding of your source code.
-title.sourceDirectory=Source Directory
-description.sourceDirectory=Additional path to the source code if not in the root of the workspace \
-  (or outside of the workspace).
+title.sourceDirectories=Source Directories
+description.sourceDirectories=Additional paths to the source code if not in the root of the workspace \
+  (or outside the workspace).
 title.blameDisabled=Disable retrieval of blame information (author and commit) from SCM
 title.filter=Issue Filters
-description.filter=Issues will be matched with all of the specified filters. If no filter is \
+description.filter=Issues will be matched with all the specified filters. If no filter is \
   defined, then all issues will be published. Filters with empty regular expression will be ignored.
 
