Remove Maven cache.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
         check-latest: true
-        cache: 'maven'
+#       cache: 'maven'
     - name: Build with Maven
       env:
         BROWSER: firefox-container
