Add `noopener` and `norefferer` to `message.properties`.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
@@ -1,13 +1,13 @@
 title.reportEncoding=Report Encoding
 description.reportEncoding=Encoding of your report files.
 title.pattern=Report File Pattern
-description.patternRequired=<a href="{0}">Fileset ''includes''</a> syntax \
+description.patternRequired=<a rel="noopener noreferrer" href="{0}">Fileset ''includes''</a> syntax \
     specifying the files to scan for issues, \
     such as ''**/target/report.log''.
-description.patternOrDefault=<a href="{0}">Fileset ''includes''</a> syntax \
+description.patternOrDefault=<a rel="noopener noreferrer" href="{0}">Fileset ''includes''</a> syntax \
     specifying the files to scan for issues. \
     If you leave this field empty then the default file pattern ''{1}'' will be used.
-description.patternOrConsole=<a href="{0}">Fileset ''includes''</a> syntax \
+description.patternOrConsole=<a rel="noopener noreferrer" href="{0}">Fileset ''includes''</a> syntax \
     specifying the files to scan for issues, \
     such as ''**/target/report.log''. \
     If you leave this field blank then the console log will be scanned for issues.
