--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/tasks/OpenTasks/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/tasks/OpenTasks/config.properties
@@ -1,6 +1,6 @@
-description.files=<a href="{0}">Fileset ''includes''</a> setting that specifies the workspace files to \
+description.files=<a rel="noopener noreferrer" href="{0}">Fileset ''includes''</a> setting that specifies the workspace files to \
   scan for open tasks, such as '**/*.java'.
-description.exclude.files=<a href="{0}">Fileset ''excludes''</a> setting that specifies the workspace files to \
+description.exclude.files=<a rel="noopener noreferrer" href="{0}">Fileset ''excludes''</a> setting that specifies the workspace files to \
   exclude scanning for tasks, such as library source files.
 description.tags=Configure the tags identifiers that should be looked for in the workspace files. \
                 For each priority a comma separated list of tags could be defined, e.g. TODO, FIXME, etc. \
